--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ digest = "0.8.1"
 hex = "^0.3"
 blake2b_simd = "0.5.7"
 derivative = "2.1.1"
-lazy_static = "1.4.0"
+#lazy_static = "1.4.0"
 
 [dependencies.rust-gmp-kzen]
 version = "0.5.0"
